--- a/components/vs-code-extension/code/Code.module.css
+++ b/components/vs-code-extension/code/Code.module.css
@@ -31,6 +31,10 @@ a.cDownload span {
     line-height: 18px;
 }
 
+.codeSnippet img {
+    border: 1px solid #ccc;
+}
+
 /* .codeSnippet div pre.shiki {
     padding-top: 0 !important;
     background-color: #ffffff !important;
@@ -38,6 +42,7 @@ a.cDownload span {
 
 .box img:not(.doNotFill) {
     border-radius: 4px;
+    border: 1px solid #ccc;
     width: -moz-available !important;
     width: -webkit-fill-available !important;
     width: fill-available !important;
