--- a/components/data-oriented-programming/code/Code.module.css
+++ b/components/data-oriented-programming/code/Code.module.css
@@ -223,3 +223,13 @@ a.cDownload span {
     position: relative;
     z-index: 999;
 }
+
+.code-panel.diagram-multi {
+    overflow: hidden;
+    text-align: center;
+    padding: 30px;
+
+    position: relative;
+    z-index: 999;
+}
+
