--- a/components/hacktoberfest-2025/rules/Rules.module.css
+++ b/components/hacktoberfest-2025/rules/Rules.module.css
@@ -1,8 +1,19 @@
+.rulesContainer {
+  /* border: 1px solid #ffffff; */
+  border-radius: 5px;
+  padding: 20px;
+  /* background-color: rgb(255 255 255 / 0.15); */
+  border-radius: 5px;
+  border: 0.5px solid rgba(255, 255, 255, 0.50);
+  background: rgba(255, 255, 255, 0.10);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
 .titleLink {
   text-decoration: none;
   color: #20b6b0;
   font-size: 16px;
   font-weight: 400;
+  cursor: pointer;
 }
 
 .titleLink:hover {
@@ -12,25 +23,6 @@
 
 .title {
   margin-bottom: 0;
-}
-
-.description {
-  color: #57595d;
-  font-size: 14px;
-}
-
-.contentCol {
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.sub {
-  margin-left: 10px;
-}
-
-.cardDescription {
-  color: #ffffff;
-  font-weight: 400;
 }
 
 .content ul {
@@ -57,4 +49,30 @@
   background-repeat: no-repeat;
   background-position: left top;
   background-size: 32px;
+}
+
+.ruleCard {
+  background: transparent;
+  border-radius: 5px;
+  border: 0.5px solid rgba(255, 255, 255);
+  color: #ffffff;
+}
+
+.ruleCard .cardTitle {
+  margin-bottom: 0 !important;
+  font-weight: normal !important;
+}
+
+.ruleCard ul {
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+
+.ruleCard ul li+li {
+  margin-top: 10px;
+}
+
+.content {
+  margin-bottom: 0;
+  margin-top: 20px;
 }
