Fix responsive issues

--- a/components/hacktoberfest-2025/intro/Intro.module.css
+++ b/components/hacktoberfest-2025/intro/Intro.module.css
@@ -46,7 +46,11 @@
     width: auto
 }
 
-
+@media (max-width: 390px) {
+    .title h1 {
+        font-size: 48px;
+    }
+}
 
 @media (max-width: 768px) {
     .hackLogo {
