Add rewards images

--- a/components/hacktoberfest-2025/rewards/Rewards.module.css
+++ b/components/hacktoberfest-2025/rewards/Rewards.module.css
@@ -1,7 +1,7 @@
 .rewardsContainer {
   /* border: 1px solid #ffffff; */
   border-radius: 5px;
-  padding: 20px;
+  padding: 30px;
   /* background-color: rgb(255 255 255 / 0.15); */
   border-radius: 5px;
   border: 0.5px solid rgba(255, 255, 255, 0.50);
@@ -128,4 +128,9 @@ a.visit:hover {
   color: inherit;
   display: flex;
   flex-grow: 1;
+}
+
+.rewardCard {
+  background: none;
+  border: none;
 }
